# manywidgets

./: .gitignore  README.md  manywidgets-plan.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: deploy.yml  release.yml  test.yml
docs/: index.md  myst.yml
docs/examples/: demo.ipynb  lonboard-map.ipynb
docs/guides/: create-your-own-widget.md  linking.md  lonboard.md  static-export.md  styling.md
docs/upstream/: static-export-plugin-notes.md
docs/widgets/: chart.md
scripts/: browser_check.py  build.mjs  build_skill_reference.py  build_widget_docs.py
src/manywidgets/: __init__.py  __main__.py  _base.py
src/manywidgets/binder/: __init__.py  doc.md  widget.py
src/manywidgets/binder/src/: index.ts
src/manywidgets/binder/tests/: binder.test.ts  test_binder.py
src/manywidgets/button/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/button/src/: index.ts
src/manywidgets/button/tests/: button.test.ts  test_button.py
src/manywidgets/chart/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/chart/src/: index.ts
src/manywidgets/chart/tests/: chart.test.ts  test_chart.py
src/manywidgets/column/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/column/src/: index.ts
src/manywidgets/column/tests/: column.test.ts  test_column.py
src/manywidgets/dropdown/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/dropdown/src/: index.ts
src/manywidgets/dropdown/tests/: dropdown.test.ts  test_dropdown.py
src/manywidgets/grid/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/grid/src/: index.ts
src/manywidgets/grid/tests/: grid.test.ts  test_grid.py
src/manywidgets/legend/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/legend/src/: index.ts
src/manywidgets/legend/tests/: legend.test.ts  test_legend.py
src/manywidgets/lonboard/: __init__.py  conftest.py
src/manywidgets/lonboard/filter_binder/: __init__.py  doc.md  widget.py
src/manywidgets/lonboard/layer_filter/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/lonboard/layer_toggle/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/lonboard/map_flyer/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/number_display/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/number_display/src/: index.ts
src/manywidgets/number_display/tests/: number_display.test.ts  test_number_display.py
src/manywidgets/number_input/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/number_input/src/: index.ts
src/manywidgets/number_input/tests/: number_input.test.ts  test_number_input.py
src/manywidgets/range_slider/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/range_slider/src/: index.ts
src/manywidgets/range_slider/tests/: range_slider.test.ts  test_range_slider.py
src/manywidgets/row/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/row/src/: index.ts
src/manywidgets/row/tests/: row.test.ts  test_row.py
src/manywidgets/skill/: SKILL.md
src/manywidgets/skill/references/: authoring.md  usage.md  widgets-api.md
src/manywidgets/slider/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/slider/src/: index.ts
src/manywidgets/slider/tests/: slider.test.ts  test_slider.py
src/manywidgets/stat/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/stat/src/: index.ts
src/manywidgets/stat/tests/: stat.test.ts  test_stat.py
src/manywidgets/text/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/text/src/: index.ts
src/manywidgets/text/tests/: test_text.py  text.test.ts
src/manywidgets/themes/: __init__.py  _theme.py  builtin.py
src/manywidgets/toggle/: __init__.py  doc.md  style.css  widget.py
src/manywidgets/toggle/src/: index.ts
src/manywidgets/toggle/tests/: test_toggle.py  toggle.test.ts
tests/: test_integration.py  test_lonboard_optional.py  test_theming.py  test_widgets.py
tests/js/: index.ts
(+12 files in other folders)
